--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -5,15 +5,10 @@ Average Rating for episode appearances: <b><%= Episode.avgrating(@episode) %><br
 <%= @episode.date %><br>
 <% @episode.guests.each do |guest| %>
     <ul>
-    <li><%= link_to guest.name, guest_path(guest) %> </li>
+    <li><b>Guest: </b><%= link_to guest.name, guest_path(guest) %> </li>
     </ul>
 <% end %>
 
-<% @episode.appearances.each do |appearance| %>
-    <ul>
-      <li><b>Guest:</b> <%= link_to appearance.guest.name, guest_path(appearance.guest) %> <b>Rating:</b> <%=appearance.rating%></li>
-    </ul>
-  <% end %>
-  
+
 
 
